<resources>
    <string name="app_name" translatable="false">GPS Tracking</string>

    <!-- Tabs -->
    <string name="tab_gpsfix">GPS Fix</string>
    <string name="tab_track">Track</string>
    <string name="tab_tracklist">Tracklist</string>

    <!-- GPS Fix -->
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>
    <string name="satellites">Satellites</string>
    <string name="altitude">Altitude</string>
    <string name="altitudeUM">m</string>
    <string name="speed">Speed</string>
    <string name="speedUM">km/h</string>
    <string name="accuracy">Accuracy</string>
    <string name="accuracyUM">m</string>
    <string name="direction">Direction</string>
    <string name="startRecord">Start Record</string>
    <string name="stopRecord">Stop Record</string>
    <string name="numberPoint">Points Recorded</string>

    <!-- GPS Status messages -->
    <string name="gps_searching">Looking for GPS</string>

    <!-- Recording buttons (bottom side) -->
    <string name="placemarks">Placemarks</string>
    <string name="trackpoints">Trackpoints</string>

    <!-- Main menu -->
    <string name="toast_track_finished_click_again">Double click to finalize this track</string>

    <!-- Notification icon -->
    <string name="notification_contentText">is active</string>
    <string name="channel_name">GPSLogger Notifications</string>

    <!-- Log string -->
    <string name="location_allow_permission_msg">"Please allow all permissions in App Settings for additional
        functionality. "
    </string>

    <!-- Default string -->
    <string name="no_name">No Name</string>

    <!-- Dialog string -->
    <string name="button_confirm">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="enter_track_name">Enter track name</string>
    <string name="notice_title">Notice</string>
    <string name="notice_upload_content">Are you sure to upload this track to Fire base ?</string>
    <string name="notice_delete_content">Are you sure to delete this track ?</string>
    <string name="uploading">Uploading ...</string>
    <string name="upload_failed">Upload failed !!</string>
    <string name="upload_success">JSON Uploaded !!</string>
    <string name="upload_progress">Uploaded: %s</string>

    <!-- Item list string -->
    <string name="item_points">%s points</string>
</resources>
